--- a/build.properties
+++ b/build.properties
@@ -1,4 +1,9 @@
-titanium.platform=/Users/jeroen/Library/Application Support/Titanium/mobilesdk/osx/5.3.0.GA/android
-android.platform=/Users/jeroen/Library/android-sdk-macosx/platforms/android-14
-google.apis=/Users/jeroen/Library/android-sdk-macosx/add-ons/addon-google_apis-google-15
-android.ndk=/Users/jeroen/Library/android-ndk-r12b
+titanium.sdk=/Users/jayon/Library/Application\ Support/Titanium/
+titanium.os=osx
+titanium.version=5.5.1.GA
+android.sdk=/Users/jayon/Library/android-sdk
+android.ndk=/Users/jayon/Library/android-ndk-r9d
+
+titanium.platform=${titanium.sdk}/mobilesdk/${titanium.os}/${titanium.version}/android
+android.platform=${android.sdk}/platforms/android-23
+google.apis=${android.sdk}/add-ons/addon-google_apis-google-23
